2007-11-22  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_config.erl: Improved error message when ejabberd
	config file is not found.

2007-11-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth_internal.erl: Better count management and
	batch users retrieval internal database

2007-11-14  Mickael Remond  <mremond@process-one.net>

	* examples/extauth/check_pass_null.pl: Fixed external
	authentication example script (EJAB-404)

2007-11-05  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_config.erl: Refactoring: Move internal
	data structure to an include file.
	* src/ejabberd_config.hrl: Likewise.

2007-11-03  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_auth.erl: Better count management and batch users
	retrieval for relational database (Thanks to Massimiliano Mirra).
	* src/ejabberd_auth_odbc.erl: Likewise.
	* src/odbc/odbc_queries.erl: Likewise.

2007-11-02  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Refactoring. Moved c2s limits
	acquisition to a separate module.
	* src/ejabberd_c2s_config.erl: Likewise.
	
2007-11-01  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Support for c2s ACL access,
	max_stanza and shaper on http_poll connections (EJAB-243,
	EJAB-415, EJAB-416)

2007-10-30  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_s2s.erl: don't use the resource of the sender to choose
	a s2s connection to ensure that a muc room always uses the same
	connection (EJAB-360)

2007-10-23  Christophe Romain  <christophe.romain@process-one.net>

	* doc/dev.tex: Added extauth script details (EJAB-334)
	
2007-10-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Bugfix on previous change (EJAB-380)

2007-10-17  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberdctl.template: Several improvements (EJAB-380)
	(thanks to Sander Devrieze, Sergei Golovan, Torsten Werner and
	Badlop)